# Anodyne

./: .dockerignore  .env.example  .gitignore  .trivyignore  GF_REPORT.md  GH_REPORT.md  LICENSE  Makefile  README.md  index.html  mypy.ini  pyproject.toml  ruff.toml  uv.toml
.claude/: CLAUDE.md  ito.state.json  ito_learned.json
.claude/ito_outputs/: 32443cdd6091.txt  8343d09b0a3d.txt  9ab65b250034.txt
.github/workflows/: build-and-push.yml  ci.yml
apps/api-gateway/: Dockerfile  pyproject.toml
apps/api-gateway/src/api_gateway/: __init__.py  app.py  config.py  deps.py  downloads.py  evaluation_routes.py  export_routes.py  hitl_routes.py  perturbation_routes.py  seed.py
apps/api-gateway/tests/: test_app.py  test_audio_dataset_routes.py  test_dataset_routes.py  test_dataset_sample_routes.py  test_evaluation_routes.py  test_evaluation_routes_task_metrics.py  test_export_routes.py  test_export_routes_graph.py  test_graph_dataset_routes.py  test_hitl_review_gate_integration.py  test_hitl_routes.py  test_image_dataset_routes.py  test_models_routes.py  test_perturbation_routes.py  test_templates_routes.py  test_video_provider_routes.py
apps/evaluation-worker/: pyproject.toml
apps/evaluation-worker/src/evaluation_worker/: __init__.py  config.py  main.py
apps/evaluation-worker/tests/: test_evaluation_worker_wiring.py
apps/generation-worker/: Dockerfile  pyproject.toml
apps/generation-worker/src/generation_worker/: __init__.py  audio.py  config.py  main.py
apps/generation-worker/tests/: test_audio_provider_factory.py  test_perturbation_worker_wiring.py  test_text_worker_wiring.py  test_worker_wiring.py
apps/web/: .gitignore  Dockerfile  auth.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  proxy.ts  vitest.config.mts
apps/web/__tests__/: auth-callbacks.test.ts  dataset-actions.test.tsx  datasets.test.tsx  evaluate-panel.test.tsx  evaluation.test.tsx  generation.test.tsx  graph.test.tsx  mock-api.ts  progress.test.tsx  providers.test.tsx  reviews.test.tsx  template-step.test.tsx  theme.test.ts  wizard.test.tsx
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/auth/[...nextauth]/: route.ts
apps/web/app/app/: dashboard.tsx  layout.tsx  page.tsx
apps/web/app/app/datasets/: dataset-list.tsx  page.tsx
apps/web/app/app/datasets/[id]/: annotations-panel.tsx  dataset-versions.tsx  evaluate-panel.tsx  export-panel.tsx  page.tsx  perturb-panel.tsx
apps/web/app/app/evaluations/[id]/: evaluation-view.tsx  page.tsx
apps/web/app/app/jobs/[id]/: job-progress-view.tsx  page.tsx
apps/web/app/app/new/: confirm-step.tsx  describe-step.tsx  generate-chooser.tsx  graph-wizard.tsx  media-wizard.tsx  page.tsx  review-step.tsx  sample-step.tsx  step-indicator.tsx  template-step.tsx  text-wizard.tsx  wizard.tsx
apps/web/app/app/perturbations/[id]/: page.tsx  perturbation-view.tsx
apps/web/app/app/providers/: page.tsx  providers-manager.tsx
apps/web/app/app/reviews/: page.tsx  review-queue.tsx
apps/web/app/app/reviews/[id]/: page.tsx  review-detail.tsx
apps/web/app/login/: page.tsx
apps/web/components/: app-nav.tsx  eval-report.tsx  feedback-widget.tsx  graph-explorer.tsx  ontology-view.tsx  provider-select.tsx  theme-toggle.tsx
apps/web/components/ui/: feedback.tsx  form.tsx
apps/web/e2e/: generate.spec.ts
apps/web/lib/: api.ts  theme-tokens.ts  use-job-progress.ts
apps/web/types/: next-auth.d.ts
docs/: architecture.md  deployment.md  dev-runbook.md  generation-followups.md  graph-followups.md
docs/superpowers/plans/: 2026-07-12-evaluation-f.md  2026-07-12-export-e.md  2026-07-12-foundation-llm.md  2026-07-12-generation-c0.md  2026-07-12-generation-c1.md  2026-07-12-generation-c2.md  2026-07-12-generation-c3.md  2026-07-12-generation-c4.md  2026-07-12-generation-c5.md  2026-07-12-generation-c6.md  2026-07-12-hitl-annotation-g.md  2026-07-12-perturbation-d.md  2026-07-13-graph-ga.md  2026-07-13-graph-gb.md  2026-07-13-graph-gc.md  2026-07-13-graph-gd.md  2026-07-13-graph-ge.md  2026-07-13-graph-wave2.md  2026-07-14-task-metrics.md
docs/superpowers/specs/: 2026-07-12-anodyne-architecture-design.md  2026-07-12-deploy-i-design.md  2026-07-12-evaluation-f-design.md  2026-07-12-export-e-design.md  2026-07-12-foundation-llm-design.md  2026-07-12-generation-c0-design.md  2026-07-12-generation-c1-design.md  2026-07-12-generation-c2-design.md  2026-07-12-generation-c3-design.md  2026-07-12-generation-c4-design.md  2026-07-12-generation-c5-design.md  2026-07-12-generation-c6-design.md  2026-07-12-generation-engine-architecture-design.md  2026-07-12-hitl-annotation-g-design.md  2026-07-12-perturbation-d-design.md  2026-07-12-web-ui-h-design.md  2026-07-13-graph-modality-design.md  2026-07-14-per-modality-task-metrics-design.md
docs/wiki/: Deployment.md  Evaluation-Engine.md  Export-and-Storage.md  Generation-Engine.md  Graph-Modality.md  Home.md  Human-in-the-Loop-and-Annotation.md  LLM-Abstraction.md  Local-Development.md  Multi-Tenancy-and-Security.md  Perturbation.md  Platform-Foundation.md  Web-UI.md
infra/cloudrun/: api-gateway-service.yaml  generation-worker-service.yaml
infra/docker/: docker-compose.prod.yml  docker-compose.yml
infra/docker/keycloak/: anodyne-realm.json
infra/docker/postgres/init/: 01-app-role.sql
infra/k8s/base/: api-gateway.yaml  configmap.yaml  generation-worker.yaml  kustomization.yaml  namespace.yaml  raycluster.yaml  secret.yaml  web.yaml
infra/k8s/overlays/dev/: kustomization.yaml  replicas-and-resources.yaml
infra/k8s/overlays/prod/: hpa-prod.yaml  kustomization.yaml  replicas-and-resources.yaml
infra/terraform/: .gitignore  README.md  artifact_registry.tf  cloud_sql.tf  gcs.tf  main.tf  outputs.tf  service_accounts.tf  variables.tf  versions.tf  workload_identity.tf
scripts/: dev-run.sh  live_smoke_test.py  setup-local-secrets.sh
