[project]
name = "anodyne"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["packages/*", "apps/*"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "mypy>=1.11", "ruff>=0.6",
       "httpx>=0.27", "moto>=5", "testcontainers[postgres]>=4", "anodyne-core",
       "anodyne-tenancy"]

[tool.uv.sources]
anodyne-core = { workspace = true }
anodyne-tenancy = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages", "apps"]
