[project]
name = "anodyne"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["packages/*", "apps/*"]
exclude = ["apps/web"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "mypy>=1.11", "ruff>=0.6",
       "httpx>=0.27", "moto>=5", "testcontainers[postgres]>=4", "anodyne-core",
       "anodyne-tenancy", "anodyne-storage", "anodyne-observability", "anodyne-llm",
       "anodyne-dataset", "anodyne-generation", "anodyne-compute", "anodyne-workflows",
       "anodyne-audio", "api-gateway", "generation-worker"]

[tool.uv.sources]
anodyne-core = { workspace = true }
anodyne-tenancy = { workspace = true }
anodyne-storage = { workspace = true }
anodyne-observability = { workspace = true }
anodyne-llm = { workspace = true }
anodyne-dataset = { workspace = true }
anodyne-generation = { workspace = true }
anodyne-compute = { workspace = true }
anodyne-workflows = { workspace = true }
anodyne-audio = { workspace = true }
api-gateway = { workspace = true }
generation-worker = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages", "apps"]
# importlib mode: monorepo has many `tests/` dirs with duplicate module basenames
# (e.g. multiple test_models.py); the default `prepend` mode collides on them.
addopts = "--import-mode=importlib"
markers = [
    "integration: requires external services (Docker/Postgres)",
    "e2e: requires a running app + browser (Playwright)",
]
