[project]
name = "api-gateway"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["anodyne-core", "anodyne-tenancy", "anodyne-storage", "anodyne-llm",
                "anodyne-observability", "anodyne-dataset", "anodyne-generation",
                "anodyne-workflows", "anodyne-tabular", "anodyne-image", "anodyne-audio",
                "anodyne-video", "anodyne-templates", "anodyne-export", "anodyne-evaluation",
                "anodyne-hitl",
                "fastapi>=0.115", "uvicorn[standard]>=0.30",
                "pydantic-settings>=2.4", "pyjwt[crypto]>=2.9", "temporalio>=1.7", "redis>=5",
                "python-multipart>=0.0.9"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.uv.sources]
anodyne-core = { workspace = true }
anodyne-tenancy = { workspace = true }
anodyne-storage = { workspace = true }
anodyne-llm = { workspace = true }
anodyne-observability = { workspace = true }
anodyne-dataset = { workspace = true }
anodyne-generation = { workspace = true }
anodyne-workflows = { workspace = true }
anodyne-tabular = { workspace = true }
anodyne-image = { workspace = true }
anodyne-audio = { workspace = true }
anodyne-video = { workspace = true }
anodyne-templates = { workspace = true }
anodyne-export = { workspace = true }
anodyne-evaluation = { workspace = true }
anodyne-hitl = { workspace = true }
