[project]
name = "generation-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["anodyne-workflows", "anodyne-storage", "anodyne-compute", "anodyne-dataset",
                "anodyne-core", "anodyne-video", "temporalio>=1.7", "redis>=5",
                "pydantic-settings>=2.4", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
anodyne-workflows = { workspace = true }
anodyne-storage = { workspace = true }
anodyne-compute = { workspace = true }
anodyne-dataset = { workspace = true }
anodyne-core = { workspace = true }
anodyne-video = { workspace = true }
